--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
     
     <div class="coming-soon">
       <h2>📚 Coming Soon!</h2>
-      <h3>"One Puppy, Two Puppies, Hey What Do You Do"</h3>
+      <h3>"One Puppy, Two Puppies, Hey What Do You Do?"</h3>
       <p class="author-name">by Rebecca M</p>
       <div class="book-description">
         <p>Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!</p>
@@ -33,7 +33,7 @@ title: Home
     <div class="book-card">
       <div class="book-cover">
         <div class="book-placeholder">
-          <h4>"One Puppy, Two Puppies, Hey What Do You Do"</h4>
+          <h4>"One Puppy, Two Puppies, Hey What Do You Do?"</h4>
           <p>Cover Coming Soon</p>
         </div>
       </div>
@@ -47,7 +47,7 @@ title: Home
           </div>
           <div class="detail-item">
             <span class="icon">🔢</span>
-            <span>Perfect for ages 2-6 learning numbers and animal sounds</span>
+            <span>Perfect for ages 0-4 learning numbers and animal sounds</span>
           </div>
           <div class="detail-item">
             <span class="icon">📚</span>
@@ -63,7 +63,7 @@ title: Home
           <span class="feature-tag">Counting</span>
           <span class="feature-tag">Animals</span>
           <span class="feature-tag">Interactive</span>
-          <span class="feature-tag">Ages 2-6</span>
+          <span class="feature-tag">Ages 0-4</span>
         </div>
       </div>
     </div>
@@ -79,10 +79,10 @@ title: Home
       </div>
       <div class="author-info">
         <h3>Rebecca M</h3>
-        <p>Rebecca is passionate about creating engaging children's literature that combines learning with joy. As a debut author, she believes that every child deserves stories that make them laugh, learn, and dream.</p>
-        <p>Her inspiration for "One Puppy, Two Puppies, Hey What Do You Do" came from watching children's natural curiosity about animals and numbers. She wanted to create a book that would make counting as fun as playing with puppies!</p>
+        <p>Rebecca is dedicated to creating engaging children's literature that combines learning with joy. As a debut author, she believes that every child deserves stories that make them laugh, learn, dream and imagine.</p>
+        <p>Her inspiration for "One Puppy, Two Puppies, Hey What Do You Do?" came from watching children's natural curiosity about animals and numbers. She wanted to create a book that would make counting as fun as playing with puppies!</p>
         <blockquote>
-          "Every child has a wild imagination waiting to be nurtured. My goal is to plant seeds of wonder that grow into lifelong love of reading."
+          "Every child has a wild imagination waiting to be nurtured. My goal is to plant seeds of wonder that grow into lifelong love of reading and creativity."
           <cite>- Rebecca M</cite>
         </blockquote>
       </div>
@@ -114,7 +114,7 @@ title: Home
           </li>
           <li>
             <span class="mission-icon">🌟</span>
-            <span>Inspire children to dream big</span>
+            <span>Inspire children to imagine and dream big</span>
           </li>
         </ul>
       </div>
