--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
     <h2>📖 Our Featured Book</h2>
     <div class="book-card">
       <div class="book-cover">
-        <a href="/books/one-puppy-two-puppies/" class="book-cover-link">
+        <a href="./books/one-puppy-two-puppies/" class="book-cover-link">
           <div class="book-placeholder">
             <div class="book-placeholder-content">
               <h4>"One Puppy, Two Puppies, Hey What Do You Do?"</h4>
@@ -42,7 +42,7 @@ title: Home
         </a>
       </div>
       <div class="book-info">
-        <h3><a href="/books/one-puppy-two-puppies/" class="book-title-link">"One Puppy, Two Puppies, Hey What Do You Do"</a></h3>
+        <h3><a href="./books/one-puppy-two-puppies/" class="book-title-link">"One Puppy, Two Puppies, Hey What Do You Do"</a></h3>
         <p class="author">by Rebecca M</p>
         <div class="book-details">
           <div class="detail-item">
