--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@ title: Home
         <input type="hidden" name="_subject" value="New Wild Imagination Press Subscriber">
         <input type="hidden" name="_captcha" value="false">
         
+        <!-- Google reCAPTCHA v3 token (populated by JavaScript) -->
+        <!-- Formspree expects this field name for reCAPTCHA v3 -->
+        <input type="hidden" name="_recaptcha" id="recaptcha-response">
+        
         <button type="submit">Join Our Story Tree!</button>
       </div>
     </form>
