--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -2,28 +2,20 @@
 title: "Bushlandia"
 author: Rebecca M
 status: Coming Soon
-age_range: "0-4 years"
-category: "Counting Book"
+age_range: "3-8 years"
+category: "Fiction"
 features:
-  - Counting
-  - Animals
-  - Interactive
-  - Ages 0-4
-description: "A charming counting book that follows playful puppies through their day"
+  - Fiction
+  - Nature
+  - Sustainability
+  - Ages 3-8
+description: "Coming soon..."
 full_description: |
-  Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!
-
-  Join ten playful puppies as they invite your child into their world of fun activities. From running in sunshine to digging in gardens, splashing in puddles to jumping for treats, each page brings new adventures and counting practice.
-
-  This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early math skills.
-
-  Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!
-amazon_link: "#"
-published_date: 
+  Description coming soon...
+amazon_link: 
+published_date:
 isbn: 
 price: 
 publisher: "Wild Imagination Press"
 layout: book
 ---
-
-{{ page.full_description }}
