--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -1,29 +1,37 @@
 ---
-title: "Imagine if..."
+title: "Imagine if...A Silly Animal Adventure"
 author: Rebecca M
 status: Coming Soon
-age_range: "0-4 years"
-category: "Counting Book"
+age_range: "2-6 years"
+category: "Fiction"
 features:
-  - Counting
+  - Fiction
   - Animals
   - Interactive
-  - Ages 0-4
+  - Ages 2-6
 description: "A charming counting book that follows playful puppies through their day"
 full_description: |
-  Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!
+  What if your child could be anything they wanted to be? Get ready for the silliest, most imaginative adventure ever!
 
-  Join ten playful puppies as they invite your child into their world of fun activities. From running in sunshine to digging in gardens, splashing in puddles to jumping for treats, each page brings new adventures and counting practice.
+  This whimsical journey takes children on a wild ride through the most wonderfully ridiculous "what if" scenarios imaginable.
 
-  This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early math skills.
+  From a giraffe in a scarf twirling with glee to a pig soaring through clouds, each page bursts with delightful absurdity that will have kids giggling uncontrollably. Watch as a kangaroo bounces in sneakers, a fish sparkles in a fancy hat, and a lion roars like a duck!
 
-  Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!
-amazon_link: "#"
+  Inside Imagine If... A Silly Animal Adventure, discover:
+
+  • laugh-out-loud silly scenarios that spark creativity
+  • rhythmic, rhyming text perfect for read-aloud fun
+  • whimsical animals doing wonderfully ridiculous things
+  • interactive "imagine if" prompts that inspire endless play
+  • a heartwarming message about loving who you are
+
+  It's time to dream big and laugh out loud! This delightful roam through imagination land builds confidence, encourages creative thinking, and reminds children that being themselves is the most wonderful thing of all.
+
+  Ready to unleash your child's wildest dreams? Dive into this silly adventure where anything is possible!
+amazon_link:
 published_date: 
 isbn: 
 price: 
 publisher: "Wild Imagination Press"
 layout: book
 ---
-
-{{ page.full_description }}
