--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -1,9 +1,9 @@
 ---
-title: "One Puppy, Two Puppies, Hey What Do You Do"
+title: "One Puppy, Two Puppies, Hey What Do You Do?"
 author: Rebecca M
 status: Coming Soon
 age_range: "0-4 years"
-category: "Counting Book"
+category: "Counting"
 features:
   - Counting
   - Animals
@@ -18,12 +18,10 @@ full_description: |
   This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early math skills.
 
   Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!
-amazon_link: "#"
+amazon_link:
 published_date: 
 isbn: 
 price: 
 publisher: "Wild Imagination Press"
 layout: book
 ---
-
-{{ page.full_description }}
