--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ title: Home
         <a href="./books/one-puppy-two-puppies/" class="book-cover-link">
           <div class="book-placeholder">
             <div class="book-placeholder-content">
-              <h4>"One Puppy, Two Puppies, Hey What Do You Do?"</h4>
+              <!-- <h4>"One Puppy, Two Puppies, Hey What Do You Do?"</h4> -->
               <div class="coming-soon-badge">Cover Coming Soon</div>
             </div>
           </div>
         </a>
       </div>
       <div class="book-info">
-        <h3><a href="./books/one-puppy-two-puppies/" class="book-title-link">"One Puppy, Two Puppies, Hey What Do You Do"</a></h3>
+        <h3><a href="./books/one-puppy-two-puppies/" class="book-title-link">"One Puppy, Two Puppies, Hey What Do You Do?"</a></h3>
         <p class="author">by Rebecca M</p>
         <div class="book-details">
           <div class="detail-item">
@@ -78,7 +78,7 @@ title: Home
             <span>Beautifully illustrated with adorable puppy characters</span>
           </div>
         </div>
-        <p class="status">📅 Status: Coming Soon to Amazon KDP</p>
+        <p class="status">📅 Status: Coming Soon to Amazon</p>
         <div class="book-features">
           <span class="feature-tag">Counting</span>
           <span class="feature-tag">Animals</span>
