--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -1,6 +1,6 @@
 ---
 title: "Imagine if...A Silly Animal Adventure"
-author: Rebecca M
+author: Rebecca Mola
 status: Coming Soon
 age_range: "2-6 years"
 category: "Fiction"
