--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -1,6 +1,6 @@
 ---
 title: "One Puppy, Two Puppies, Hey What Do You Do?"
-author: Rebecca M
+author: Rebecca Mola
 status: Coming Soon
 age_range: "0-4 years"
 category: "Counting"
