--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -1,6 +1,6 @@
 ---
 title: "Bushlandia"
-author: Rebecca M
+author: Rebecca Mola
 status: Coming Soon
 age_range: "3-8 years"
 category: "Fiction"
@@ -12,7 +12,20 @@ features:
   - Ages 3-8
 description: "Coming soon..."
 full_description: |
-  Description coming soon...
+  <p><b>What happens when four bored kids discover that the greatest adventure is right in their own backyard?</b></p>
+  <p>Summer holidays have just begun, but Lila, Finn, Leo, and Tamsin are already feeling restless. Until someone suggests the perfect solution - let's go bush! What starts as a simple walk into the Australian wilderness becomes something extraordinary when they discover the perfect spot to build their very own town.</p>
+  <p>Welcome to <b>Bushlandia</b>, a nature-based setting where fallen logs become community tables, rock ledges transform into bakeries, and imagination runs as wild as the native animals. But creating their bush paradise isn't just fun and games; they also learn to respect nature, work as a team, and leave no trace behind.</p>
+  <p>When mysterious damage appears in their town and a magical lyrebird becomes their guardian, the children realise they're becoming environmental stewards, learning lessons that will last a lifetime.</p>
+  <p>Inside <b>Bushlandia</b>, discover: <br />
+    • an enchanting Australian bush adventure featuring native wildlife
+    • important lessons about environmental responsibility and sustainability
+    • the magic that happens when imagination and creativity meet nature
+    • friendship, teamwork, and problem-solving skills
+    • how to play and explore while protecting our natural world
+  </p>
+  <p>This heartwarming story celebrates the power of imagination while teaching children to be guardians of the environment. Set against the beautiful backdrop of the Australian bush, it's an adventure that will inspire young readers to see nature as their greatest playground.</p>
+  <p>Ready to discover the magic that happens when kids choose nature over screens? Step into Bushlandia and let the adventure begin!</p>
+  <p><b>Step into Bushlandia and let the adventure begin!</b></p>
 amazon_link: 
 published_date:
 isbn: 
