Book description rendering

--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -12,35 +12,42 @@ features:
   - Ages 3-8
 description: "Coming soon..."
 full_description: |
-  <b>What happens when four bored kids discover that the greatest adventure is right in their own backyard?</b><br/>
-  Summer holidays have just begun, but Lila, Finn, Leo, and Tamsin are already feeling restless. Until someone suggests the perfect solution - let's go bush! What starts as a simple walk into the Australian wilderness becomes something extraordinary when they discover the perfect spot to build their very own town.<br/>
-  Welcome to <b>Bushlandia</b>, a nature-based setting where fallen logs become community tables, rock ledges transform into bakeries, and imagination runs as wild as the native animals. But creating their bush paradise isn't just fun and games; they also learn to respect nature, work as a team, and leave no trace behind.<br/>
-  When mysterious damage appears in their town and a magical lyrebird becomes their guardian, the children realise they're becoming environmental stewards, learning lessons that will last a lifetime.<br/>
-  Inside <b>Bushlandia</b>, discover: <br />
-    • An enchanting Australian bush adventure featuring native wildlife
-    • Important lessons about environmental responsibility and sustainability
-    • The magic that happens when imagination and creativity meet nature
-    • Friendship, teamwork, and problem-solving skills
-    • How to play and explore while protecting our natural world
+  **What happens when four bored kids discover that the greatest adventure is right in their own backyard?**
+
+  Summer holidays have just begun, but Lila, Finn, Leo, and Tamsin are already feeling restless. Until someone suggests the perfect solution - let's go bush! What starts as a simple walk into the Australian wilderness becomes something extraordinary when they discover the perfect spot to build their very own town.
+
+  Welcome to **Bushlandia**, a nature-based setting where fallen logs become community tables, rock ledges transform into bakeries, and imagination runs as wild as the native animals. But creating their bush paradise isn't just fun and games; they also learn to respect nature, work as a team, and leave no trace behind.
+
+  When mysterious damage appears in their town and a magical lyrebird becomes their guardian, the children realise they're becoming environmental stewards, learning lessons that will last a lifetime.
+
+  Inside **Bushlandia**, discover:
+
+  - An enchanting Australian bush adventure featuring native wildlife
+  - Important lessons about environmental responsibility and sustainability
+  - The magic that happens when imagination and creativity meet nature
+  - Friendship, teamwork, and problem-solving skills
+  - How to play and explore while protecting our natural world
+
   <div class="book-preview-images">
     <div class="preview-image-container">
-      <img src="/assets/images/books/bushlandia-pages-26-27.png" 
-           alt="Pages 26-27 of Bushlandia showing children exploring and building in the Australian bush" 
-           class="preview-image" 
+      <img src="/assets/images/books/bushlandia-pages-26-27.png"
+           alt="Pages 26-27 of Bushlandia showing children exploring and building in the Australian bush"
+           class="preview-image"
            loading="lazy">
       <span class="preview-caption">The adventure begins in the Australian wilderness</span>
     </div>
     <div class="preview-image-container">
-      <img src="/assets/images/books/bushlandia-pages-28-29.png" 
-           alt="Pages 28-29 of Bushlandia featuring the magical lyrebird and the children's nature town" 
-           class="preview-image" 
+      <img src="/assets/images/books/bushlandia-pages-28-29.png"
+           alt="Pages 28-29 of Bushlandia featuring the magical lyrebird and the children's nature town"
+           class="preview-image"
            loading="lazy">
       <span class="preview-caption">Discovering the magic of Bushlandia</span>
     </div>
   </div>
-  This heartwarming story celebrates the power of imagination while teaching children to be guardians of the environment. Set against the beautiful backdrop of the Australian bush, it's an adventure that will inspire young readers to see nature as their greatest playground.<br/>
-  Ready to discover the magic that happens when kids choose nature over screens? Step into Bushlandia and let the adventure begin!</br>
-  <b>Step into Bushlandia and let the adventure begin!</b>
+
+  This heartwarming story celebrates the power of imagination while teaching children to be guardians of the environment. Set against the beautiful backdrop of the Australian bush, it's an adventure that will inspire young readers to see nature as their greatest playground.
+
+  **Ready to discover the magic that happens when kids choose nature over screens? Step into Bushlandia and let the adventure begin!**
 amazon_link: 
 published_date:
 isbn: 
