--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -17,17 +17,17 @@ full_description: |
 
   From a giraffe in a scarf twirling with glee to a pig soaring through clouds, each page bursts with delightful absurdity that will have kids giggling uncontrollably. Watch as a kangaroo bounces in sneakers, a fish sparkles in a fancy hat, and a lion roars like a duck!
 
-  Inside Imagine If... A Silly Animal Adventure, discover:
+  Inside **Imagine If... A Silly Animal Adventure**, discover:
 
-  • laugh-out-loud silly scenarios that spark creativity
-  • rhythmic, rhyming text perfect for read-aloud fun
-  • whimsical animals doing wonderfully ridiculous things
-  • interactive "imagine if" prompts that inspire endless play
-  • a heartwarming message about loving who you are
+  - Laugh-out-loud silly scenarios that spark creativity
+  - Rhythmic, rhyming text perfect for read-aloud fun
+  - Whimsical animals doing wonderfully ridiculous things
+  - Interactive "imagine if" prompts that inspire endless play
+  - A heartwarming message about loving who you are
 
-  It's time to dream big and laugh out loud! This delightful roam through imagination land builds confidence, encourages creative thinking, and reminds children that being themselves is the most wonderful thing of all.
+  It's time to dream big and laugh out loud! This delightful romp through imagination land builds confidence, encourages creative thinking, and reminds children that being themselves is the most wonderful thing of all.
 
-  Ready to unleash your child's wildest dreams? Dive into this silly adventure where anything is possible!
+  **Ready to unleash your child's wildest dreams? Dive into this silly adventure where anything is possible!**
 amazon_link:
 published_date: 
 isbn: 
