--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -17,7 +17,7 @@ full_description: |
 
   This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early math skills.
 
-  Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!
+  **Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!**
 amazon_link:
 published_date: 
 isbn: 
