Added cover and fixed age range

--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -4,6 +4,7 @@ author: Rebecca Mola
 status: Coming Soon
 age_range: "7-10 years"
 category: "Fiction"
+cover_image: "/assets/images/books/bushlandia-cover-large.jpg"
 features:
   - Fiction
   - Creativity
