Index text changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
       <div class="book-description">
         <p>Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!</p>
         <p>Join ten playful puppies as they invite your child into their world of fun activities. From running in sunshine to digging in gardens, splashing in puddles to jumping for treats, each page brings new adventures and counting practice.</p>
-        <p>This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early math skills.</p>
+        <p>This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early Maths skills.</p>
         <p>Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!</p>
       </div>
     </div>
@@ -100,7 +100,7 @@ layout: default
       <div class="author-info">
         <h3>Rebecca Mola</h3>
         <p>Rebecca is dedicated to creating engaging children's literature that combines learning with joy. As a debut author, she believes that every child deserves stories that make them laugh, learn, dream and imagine.</p>
-        <p>Her inspiration for "One Puppy, Two Puppies, Hey What Do You Do?" came from watching children's natural curiosity about animals and numbers. She wanted to create a book that would make counting as fun as playing with puppies!</p>
+        <p>Rebecca enjoys writing children’s stories as a creative outlet in her spare time. With a love for learning, laughter and imagination, she hopes her stories bring a little joy to young readers — whether they spark a giggle, a new fact, or a big daydream. As a debut author, she simply writes for the fun of it and is thrilled to share her children’s books with others.</p>
         <blockquote>
           "Every child has a wild imagination waiting to be nurtured. My goal is to plant seeds of wonder that grow into lifelong love of reading and creativity."
           <cite>- Rebecca Mola</cite>
