Index text changes

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ layout: default
       </div>
       <div class="author-info">
         <h3>Rebecca Mola</h3>
-        <p>Rebecca is dedicated to creating engaging children's literature that combines learning with joy. As a debut author, she believes that every child deserves stories that make them laugh, learn, dream and imagine.</p>
-        <p>Rebecca enjoys writing children’s stories as a creative outlet in her spare time. With a love for learning, laughter and imagination, she hopes her stories bring a little joy to young readers — whether they spark a giggle, a new fact, or a big daydream. As a debut author, she simply writes for the fun of it and is thrilled to share her children’s books with others.</p>
+        <p>Rebecca is dedicated to creating engaging children's literature that combines learning with joy, and believes that every child deserves stories that make them laugh, learn, dream, and imagine.</p>
+        <p>Rebecca enjoys writing children's stories in her spare time as a creative outlet. With a love for learning, laughter, and imagination, she hopes her stories bring joy to young readers - whether they spark a giggle, teach a new fact, or inspire a big daydream. As a debut author, she's thrilled to share her children's books with others.</p>
         <blockquote>
           "Every child has a wild imagination waiting to be nurtured. My goal is to plant seeds of wonder that grow into lifelong love of reading and creativity."
           <cite>- Rebecca Mola</cite>
