One puppy changes

--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -1,6 +1,7 @@
 ---
 title: "Imagine if...A Silly Animal Adventure"
 author: Rebecca Mola
+order: 3
 status: Coming Soon
 age_range: "2-6 years"
 category: "Fiction"
