--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -1,9 +1,11 @@
 ---
 title: "One Puppy, Two Puppies, Hey What Do You Do?"
 author: Rebecca Mola
+order: 2
 status: Coming Soon
 age_range: "0-4 years"
 category: "Counting"
+cover_image: "/assets/images/books/onepuppytwopuppies-cover-large.jpg"
 features:
   - Counting
   - Animals
