--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@ layout: default
     
     <div class="coming-soon">
       <h2>Coming Soon!</h2>
-      <h3>"One Puppy, Two Puppies, Hey What Do You Do?"</h3>
+      <a href="./books/one-puppy-two-puppies/" class="hero-book-link">
+        <div class="hero-book-cover">
+          <img src="{{ '/assets/images/books/onepuppytwopuppies-cover-medium.jpg' | relative_url }}" 
+               srcset="{{ '/assets/images/books/onepuppytwopuppies-cover-small.jpg' | relative_url }} 360w,
+                       {{ '/assets/images/books/onepuppytwopuppies-cover-medium.jpg' | relative_url }} 480w,
+                       {{ '/assets/images/books/onepuppytwopuppies-cover-large.jpg' | relative_url }} 720w"
+               sizes="(max-width: 768px) 200px, 250px"
+               alt="One Puppy, Two Puppies, Hey What Do You Do? book cover by Rebecca Mola"
+               class="hero-book-cover-img"
+               loading="eager">
+        </div>
+      </a>
+      <h3><a href="./books/one-puppy-two-puppies/" class="hero-book-title-link">"One Puppy, Two Puppies, Hey What Do You Do?"</a></h3>
       <p class="author-name">by Rebecca Mola</p>
       <div class="book-description">
         <p>Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!</p>
