--- a/index.html
+++ b/index.html
@@ -12,25 +12,31 @@ layout: default
     
     <div class="coming-soon">
       <h2>Coming Soon!</h2>
-      <a href="./books/one-puppy-two-puppies/" class="hero-book-link">
-        <div class="hero-book-cover">
-          <img src="{{ '/assets/images/books/onepuppytwopuppies-cover-medium.jpg' | relative_url }}" 
-               srcset="{{ '/assets/images/books/onepuppytwopuppies-cover-small.jpg' | relative_url }} 360w,
-                       {{ '/assets/images/books/onepuppytwopuppies-cover-medium.jpg' | relative_url }} 480w,
-                       {{ '/assets/images/books/onepuppytwopuppies-cover-large.jpg' | relative_url }} 720w"
-               sizes="(max-width: 768px) 200px, 250px"
-               alt="One Puppy, Two Puppies, Hey What Do You Do? book cover by Rebecca Mola"
-               class="hero-book-cover-img"
-               loading="eager">
+      <div class="hero-book-content">
+        <div class="hero-book-left">
+          <div class="hero-book-cover">
+            <a href="./books/one-puppy-two-puppies/" class="hero-book-link">
+              <img src="{{ '/assets/images/books/onepuppytwopuppies-cover-medium.jpg' | relative_url }}" 
+                   srcset="{{ '/assets/images/books/onepuppytwopuppies-cover-small.jpg' | relative_url }} 360w,
+                           {{ '/assets/images/books/onepuppytwopuppies-cover-medium.jpg' | relative_url }} 480w,
+                           {{ '/assets/images/books/onepuppytwopuppies-cover-large.jpg' | relative_url }} 720w"
+                   sizes="(max-width: 768px) 200px, 250px"
+                   alt="One Puppy, Two Puppies, Hey What Do You Do? book cover by Rebecca Mola"
+                   class="hero-book-cover-img"
+                   loading="eager">
+            </a>
+          </div>
+          <h3><a href="./books/one-puppy-two-puppies/" class="hero-book-title-link">"One Puppy, Two Puppies, Hey What Do You Do?"</a></h3>
+          <p class="author-name">by Rebecca Mola</p>
         </div>
-      </a>
-      <h3><a href="./books/one-puppy-two-puppies/" class="hero-book-title-link">"One Puppy, Two Puppies, Hey What Do You Do?"</a></h3>
-      <p class="author-name">by Rebecca Mola</p>
-      <div class="book-description">
-        <p>Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!</p>
-        <p>Join ten playful puppies as they invite your child into their world of fun activities. From running in sunshine to digging in gardens, splashing in puddles to jumping for treats, each page brings new adventures and counting practice.</p>
-        <p>This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early Maths skills.</p>
-        <p>Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!</p>
+        <div class="hero-book-info">
+          <div class="book-description">
+            <p>Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!</p>
+            <p>Join ten playful puppies as they invite your child into their world of fun activities. From running in sunshine to digging in gardens, splashing in puddles to jumping for treats, each page brings new adventures and counting practice.</p>
+            <p>This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early Maths skills.</p>
+            <p>Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!</p>
+          </div>
+        </div>
       </div>
     </div>
     <a href="#contact" class="cta-button">🔔 Notify Me When Available</a>
