OG and Twitter files

--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -1,6 +1,7 @@
 ---
 title: "Bushlandia"
 author: Rebecca Mola
+author_url: /author/
 order: 1
 status: Coming Soon
 age_range: "7-10 years"
@@ -12,7 +13,25 @@ features:
   - Nature
   - Sustainability
   - Ages 7-10
-description: "Coming soon..."
+
+# SEO & Marketing
+description: "An enchanting Australian bush adventure where four kids create their own nature town, learning environmental responsibility, teamwork, and the magic of imagination."
+keywords: "Australian children's books, bush adventure, environmental stories, nature exploration, kids 7-10, sustainability, teamwork, creative play, Australian wildlife, outdoor adventure"
+
+# Book Details
+amazon_link: "#preorder"
+published_date: "2025-12-01"
+isbn: "TBA"
+price: "$24.95 AUD"
+page_count: 48
+format: "Hardcover"
+publisher: "Wild Imagination Press"
+
+# Social Sharing
+og_image: "/assets/images/books/bushlandia-og.jpg"
+twitter_image: "/assets/images/books/bushlandia-twitter.jpg"
+
+layout: book
 full_description: |
   **What happens when four bored kids discover that the greatest adventure is right in their own backyard?**
 
@@ -50,10 +69,4 @@ full_description: |
   This heartwarming story celebrates the power of imagination while teaching children to be guardians of the environment. Set against the beautiful backdrop of the Australian bush, it's an adventure that will inspire young readers to see nature as their greatest playground.
 
   **Ready to discover the magic that happens when kids choose nature over screens? Step into Bushlandia and let the adventure begin!**
-amazon_link: 
-published_date:
-isbn: 
-price: 
-publisher: "Wild Imagination Press"
-layout: book
 ---
