--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -1,6 +1,7 @@
 ---
 title: "One Puppy, Two Puppies, Hey What Do You Do?"
 author: Rebecca Mola
+author_url: /author/
 order: 2
 status: Coming Soon
 age_range: "0-4 years"
@@ -11,7 +12,25 @@ features:
   - Animals
   - Interactive
   - Ages 0-4
-description: "A charming counting book that follows playful puppies through their day"
+
+# SEO & Marketing
+description: "A delightful counting book following ten playful puppies through fun daily activities. Perfect for toddlers learning numbers while celebrating the bond between children and their beloved pets."
+keywords: "counting books for toddlers, puppy books, numbers 1-10, preschool books, toddler learning, animal books, interactive counting, early math, bedtime stories, ages 0-4"
+
+# Book Details
+amazon_link: "#preorder"
+published_date: "2025-10-01"
+isbn: "TBA"
+price: "$19.95 AUD"
+page_count: 32
+format: "Hardcover"
+publisher: "Wild Imagination Press"
+
+# Social Sharing
+og_image: "/assets/images/books/onepuppytwopuppies-og.jpg"
+twitter_image: "/assets/images/books/onepuppytwopuppies-twitter.jpg"
+
+layout: book
 full_description: |
   Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!
 
@@ -20,10 +39,4 @@ full_description: |
   This sweet story celebrates both learning and the precious relationship between children and their beloved pets. Every page invites little ones to join in the fun while building essential early math skills.
 
   **Perfect for bedtime cuddles, this book will have you and your child snuggling up together, just like the child and puppy in the story!**
-amazon_link:
-published_date: 
-isbn: 
-price: 
-publisher: "Wild Imagination Press"
-layout: book
 ---
