Added author details

--- a/index.html
+++ b/index.html
@@ -113,10 +113,12 @@ layout: default
     <h2>✨ Meet the Author</h2>
     <div class="author-card">
       <div class="author-image">
-        <img src="{{ '/assets/images/rebecca.jpeg' | relative_url }}" alt="Author Rebecca Mola" loading="lazy">
+        <a href="{{ '/author/' | relative_url }}">
+          <img src="{{ '/assets/images/rebecca.jpeg' | relative_url }}" alt="Author Rebecca Mola" loading="lazy">
+        </a>
       </div>
       <div class="author-info">
-        <h3>Rebecca Mola</h3>
+        <h3><a href="{{ '/author/' | relative_url }}">Rebecca Mola</a></h3>
         <p>Rebecca is dedicated to creating engaging children's literature that combines learning with joy, and believes that every child deserves stories that make them laugh, learn, dream, and imagine.</p>
         <p>Rebecca enjoys writing children's stories in her spare time as a creative outlet. With a love for learning, laughter, and imagination, she hopes her stories bring joy to young readers - whether they spark a giggle, teach a new fact, or inspire a big daydream. As a debut author, she's thrilled to share her children's books with others.</p>
         <blockquote>
