--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+title: Wild Imagination Press | Australian Children's Books
+description: "Wild Imagination Press publishes enchanting Australian children's books. From counting puppies to bush adventures, our stories nurture creativity in ages 0-10. Coming soon to Amazon."
+keywords: "Australian children's books, kids books australia, counting books, nature stories, environmental books kids, ages 0-10, independent publisher"
 ---
 
 <section class="hero">
