--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -31,6 +31,23 @@ publisher: "Wild Imagination Press"
 og_image: "/assets/images/books/bushlandia-og.jpg"
 twitter_image: "/assets/images/books/bushlandia-twitter.jpg"
 
+# FAQ
+faq:
+  - question: "What age is Bushlandia suitable for?"
+    answer: "Bushlandia is perfect for children aged 7-10 years old. The story's themes of creativity, teamwork, and environmental responsibility resonate well with this age group, making it ideal for independent readers or family read-aloud sessions."
+  
+  - question: "Where can I buy this book?"
+    answer: "Bushlandia will be available on Amazon in late 2025. Join our email list to be notified as soon as it launches and receive exclusive updates about the release!"
+  
+  - question: "Is this available as an ebook or paperback?"
+    answer: "Bushlandia will launch as a premium hardcover edition, with ebook and paperback formats to follow. Subscribe to our newsletter for format availability updates and launch notifications."
+  
+  - question: "Are there reading guides or activity sheets available?"
+    answer: "Yes! We'll provide free reading guides, environmental activity sheets, and creative play resources for parents and educators. Sign up for our newsletter to receive these complementary materials when the book launches."
+  
+  - question: "What makes Bushlandia special?"
+    answer: "Bushlandia uniquely combines adventure storytelling with environmental education, set against authentic Australian bush settings featuring native wildlife. It teaches sustainability and environmental stewardship while sparking imagination, making learning about nature an exciting adventure rather than a lesson."
+
 layout: book
 full_description: |
   **What happens when four bored kids discover that the greatest adventure is right in their own backyard?**
