--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -30,6 +30,23 @@ publisher: "Wild Imagination Press"
 og_image: "/assets/images/books/onepuppytwopuppies-og.jpg"
 twitter_image: "/assets/images/books/onepuppytwopuppies-twitter.jpg"
 
+# FAQ
+faq:
+  - question: "What age group is this counting book for?"
+    answer: "One Puppy, Two Puppies is designed for toddlers and preschoolers aged 0-4 years. It's perfect for introducing early math concepts through engaging puppy illustrations and interactive counting activities."
+  
+  - question: "Where can I purchase this book?"
+    answer: "This delightful counting book will be available on Amazon in October 2025. Sign up for our email list to receive launch notifications and exclusive early reader offers!"
+  
+  - question: "Is this book available in different formats?"
+    answer: "One Puppy, Two Puppies will launch as a durable hardcover edition perfect for little hands. Paperback and digital formats will be available later. Subscribe to stay informed about all format releases."
+  
+  - question: "What educational value does this book provide?"
+    answer: "This counting book teaches numbers 1-10 through playful puppy activities, helping toddlers develop early math skills, counting confidence, and number recognition. It also celebrates the special bond between children and pets while encouraging interactive read-aloud engagement."
+  
+  - question: "How long does it take to read this book?"
+    answer: "One Puppy, Two Puppies is a 32-page picture book that typically takes 5-10 minutes to read aloud, making it perfect for bedtime stories, circle time, or quick counting practice sessions throughout the day."
+
 layout: book
 full_description: |
   Does your little one love puppies and learning to count? This delightful book combines both in the most heartwarming way!
