Corrected google rich results

--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -1,10 +1,13 @@
 ---
 title: "Bushlandia"
-author: Rebecca Mola
+author: 
+  name: Rebecca Mola
+  url: https://wildimaginationpress.com/author/
 author_url: /author/
 order: 1
 status: Coming Soon
 age_range: "7-10 years"
+image: /assets/images/books/bushlandia-cover-large.jpg
 category: "Fiction"
 cover_image: "/assets/images/books/bushlandia-cover-large.jpg"
 features:
