Added blog and fixes

--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -1,6 +1,9 @@
 ---
 title: "Imagine if... A Silly Animal Adventure"
-author: Rebecca Mola
+author:
+  name: Rebecca Mola
+  url: https://wildimaginationpress.com/author/
+author_url: /author/
 order: 3
 status: Coming Soon
 age_range: "2-6 years"
