--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -1,6 +1,8 @@
 ---
 title: "One Puppy, Two Puppies, Hey What Do You Do?"
-author: Rebecca Mola
+author:
+  name: Rebecca Mola
+  url: https://wildimaginationpress.com/author/
 author_url: /author/
 order: 2
 status: Coming Soon
